tests/ui/has-expr-argument.rs
use testhooks::testhooks;

#[testhooks(true)]
mod tests {}

fn main() {}
